--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="src/Assets/icon.png" />
+    <link rel="icon" type="image/svg+xml" href="src/Assets/LogoT.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JATA Ingeniería</title>
+    <title>JATA Mantenimientos e Ingeniería HSEQ</title>
   </head>
   <body>
     <div id="root"></div>
