--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#004aad">
+    <meta name="google-site-verification" content="5zuvcHJ0b-cAZOr0zZ9NQ-6fmksPhLJksBr--zi4MSM" />
     
     <title>JATA Mantenimientos e Ingeniería HSEQ</title>
     <meta name="description" content="Especialistas en mantenimiento e ingeniería HSEQ. Ofrecemos soluciones innovadoras en seguridad, calidad y medio ambiente.">
