--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#004aad">
-    <meta name="google-site-verification" content="5zuvcHJ0b-cAZOr0zZ9NQ-6fmksPhLJksBr--zi4MSM" />
     
     <title>JATA Mantenimientos e Ingeniería HSEQ</title>
-    <meta name="description" content="Especialistas en mantenimiento e ingeniería HSEQ. Ofrecemos soluciones innovadoras en seguridad, calidad y medio ambiente.">
-    <meta name="keywords" content="Mantenimiento, Ingeniería, HSEQ, Seguridad, Calidad, Medio Ambiente, Servicios Industriales">
+    <meta name="description" content="JATA Mantenimientos e Ingeniería HSEQ ofrece asesorías, consultorías y certificaciones en Seguridad y Salud en el Trabajo, maquinaria pesada, izaje y mantenimiento industrial.">
+    <meta name="keywords" content="Mantenimiento, Ingeniería, HSEQ, Seguridad, Salud en el Trabajo, Certificación, Maquinaria Pesada, Equipos de Izaje">
     <meta name="author" content="JATA Mantenimientos e Ingeniería HSEQ">
     <meta name="robots" content="index, follow">
 
@@ -16,15 +15,15 @@
     <link rel="manifest" href="/manifest.json">
 
     <meta property="og:title" content="JATA Mantenimientos e Ingeniería HSEQ">
-    <meta property="og:description" content="Expertos en mantenimiento e ingeniería HSEQ. Calidad y seguridad en cada proyecto.">
-    <meta property="og:image" content="https://jatamttoingenieriahseq.com/og-image.png">
+    <meta property="og:description" content="Expertos en mantenimiento e ingeniería HSEQ. Capacitación y certificación en seguridad, maquinaria pesada y equipos de izaje.">
+    <meta property="og:image" content="%PUBLIC_URL%/og-image.png">
     <meta property="og:url" content="https://jatamttoingenieriahseq.com">
     <meta property="og:type" content="website">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="JATA Mantenimientos e Ingeniería HSEQ">
-    <meta name="twitter:description" content="Expertos en mantenimiento e ingeniería HSEQ. Calidad y seguridad en cada proyecto.">
-    <meta name="twitter:image" content="https://jatamttoingenieriahseq.com/og-image.png">
+    <meta name="twitter:description" content="Expertos en mantenimiento e ingeniería HSEQ. Capacitación y certificación en seguridad, maquinaria pesada y equipos de izaje.">
+    <meta name="twitter:image" content="%PUBLIC_URL%/og-image.png">
 </head>
 <body>
     <div id="root"></div>
